# Iot-gateway

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  PROJECT_STATUS.md  README.md  build.sh  package_rk3568.sh
.github/: release-drafter.yml
.github/workflows/: build.yml  release-drafter.yml
IotEdgeGateway/: CMakeLists.txt  changelog.md
IotEdgeGateway/cmake/: version.hpp.in
IotEdgeGateway/config/: index.html
IotEdgeGateway/config/devices/: mqtt.yaml  schema.yaml  zigbee.yaml
IotEdgeGateway/config/devices/drivers/: actuators.yaml  sensors.yaml
IotEdgeGateway/config/devices/protocols/: modbus.yaml
IotEdgeGateway/config/environments/: development.yaml  production.yaml
IotEdgeGateway/config/network/: mqtt-broker.yaml  websocket.yaml
IotEdgeGateway/config/rules/: alarm-rules.yaml  automation-rules.yaml
IotEdgeGateway/docs/: api-reference.md  changelog.md
IotEdgeGateway/docs/architecture/: api-reference.md  system-design.md
IotEdgeGateway/docs/deployment/: hardware-setup.md  quick-start.md
IotEdgeGateway/docs/development/: coding-standards.md
IotEdgeGateway/project/: README.md  requirements.txt
IotEdgeGateway/src/core/common/config/: config_manager.hpp  config_validator.cpp
IotEdgeGateway/src/core/common/logger/: file_logger.cpp  logger.hpp
IotEdgeGateway/src/core/common/utils/: fs_compat.hpp  json_utils.hpp  network_utils.hpp  std_compat.hpp  time_utils.hpp
IotEdgeGateway/src/core/control/: rule_engine.hpp
IotEdgeGateway/src/core/control/rule_engine/: rule_engine.hpp
IotEdgeGateway/src/core/device/manager/: device_manager.hpp  device_registry.cpp
IotEdgeGateway/src/core/device/model/: device_entity.hpp  device_status.hpp
IotEdgeGateway/src/core/device/protocol_adapters/: adapter_base.hpp
IotEdgeGateway/src/core/device/protocol_adapters/modbus_adapter/: modbus_adapter.hpp  modbus_rtu.cpp  modbus_tcp.cpp
IotEdgeGateway/src/core/device/protocol_adapters/mqtt_adapter/: mqtt_adapter.hpp  mqtt_client.cpp
IotEdgeGateway/src/core/device/protocol_adapters/zigbee_adapter/: zigbee_adapter.hpp  zigbee_protocol.cpp
IotEdgeGateway/src/gateway/: gateway_core.cpp  gateway_core.h  gateway_core.hpp  main.cpp
IotEdgeGateway/src/services/system_services/camera/: camera_manager.cpp  camera_manager.hpp
IotEdgeGateway/src/services/system_services/update/: update_manager.hpp  version_controller.cpp
IotEdgeGateway/src/services/web_services/api/: camera_api.cpp  control_api.cpp  device_api.cpp  rest_api.hpp  rule_api.cpp  system_api.cpp
IotEdgeGateway/src/services/web_services/websocket/: websocket_server.hpp
IotEdgeGateway/www/: index.html
scripts/: format_code.sh
scripts/docker/: run_docker_build.sh  toolchain-aarch64.cmake
tools/: check_format.sh  deploy_to_board.sh
tools/docker/: Dockerfile  Dockerfile.build  run_docker_build.sh
